# HumbleNet

./: .codeclimate.yml  .editorconfig  .gitattributes  .gitignore  .gitmodules  AUTHORS.md  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  LICENSE.md  NOTICES.md  README.md  TODO.md
.github/codeql/: codeql-config.yml
.github/workflows/: build.yml  build_linux.yml  codeql-analysis.yml
cmake/: .editorconfig  BoilerPlate.cmake  UtilityFunctions.cmake
docs/: generic_attributes.md  lobby_system.md
samples/: CMakeLists.txt  hello_world.cpp  lobby_demo.cpp
samples/c-sharp/: Test.sln
samples/c-sharp/TestPeer/: TestPeer.cs  TestPeer.csproj  test_peer.cs
src/api_builder/: CMakeLists.txt  build_csharp.cpp  build_csharp.h  build_export.cpp  build_export.h  build_include.cpp  build_include.h  build_loader.cpp  build_loader.h  builder.cpp  utilities.cpp  utilities.h
src/humblenet/: CMakeLists.txt  HumbleNet_API.json  humblenet_api.cs  humblenet_asmjs_amalgam_template.cpp
src/humblenet/humblepeer/: hmac.cpp  hmac.h  humblenet_types_internal.h  humblepeer.cpp  humblepeer.fbs  humblepeer.h  lobby.cpp  lobby.h
src/humblenet/include/: humblenet.h  humblenet_attributes.h  humblenet_events.h  humblenet_lobbies.h  humblenet_p2p.h  humblenet_socket.h
src/humblenet/loader/: loader.cpp
src/humblenet/src/: circular_buffer.h  humblenet_alias.cpp  humblenet_alias.h  humblenet_attributes.cpp  humblenet_attributes_internal.h  humblenet_core.cpp  humblenet_datagram.cpp  humblenet_datagram.h  humblenet_events.cpp  humblenet_events_internal.h  humblenet_lobbies.cpp  humblenet_p2p.cpp  humblenet_p2p_connection.cpp  humblenet_p2p_internal.h  humblenet_p2p_signaling.cpp  humblenet_p2p_signaling.h  humblenet_utils.h  libpoll.cpp  libpoll.h  libsocket.cpp  libsocket.h  libwebrtc.cpp  libwebrtc.h  libwebrtc_asmjs.cpp  libwebrtc_dynamic.cpp  libwebsockets_asmjs.cpp  libwebsockets_asmjs.h  libwebsockets_native.cpp  libwebsockets_native.h  mutex.cpp  mutex.h
src/humblenet/webrtc/: exported_linux.map  exported_osx.map  exported_win.def  webrtc_native.cpp
src/peer-server/: CMakeLists.txt  config.cpp  config.h  game.cpp  game.h  game_db.cpp  game_db.h  logging.cpp  logging.h  p2p_connection.cpp  p2p_connection.h  peer-server.cpp  peer_db.cpp  peer_db.h  random.cpp  random.h  server.cpp  server.h
tests/: CMakeLists.txt  hello_world.cpp  test_attributes.cpp  test_circular_buffer.cpp  test_client_lobbies.cpp  test_client_p2p_connection.cpp  test_humblepeer.cpp  test_loader.cpp  test_peer.cpp  test_peer.fbs  test_server_p2p_connection.cpp  test_webrtc.cpp
tests/afl/: afl-parseMessage.cpp  afl-webrtc.cpp  test-parseServer.cpp
tests/c-sharp/: Test.sln
tests/c-sharp/TestPeer/: AssemblyInfo.cs
